== Released [attachment:wiki:SoftwareReleases:eLife-1.6b23.zip V1.6b23]   ==

''' Cbus '''

Changed default label key selector tag for DLT from DEFAULT to DEFAULT_LABEL_KEY

''' Cache '''
 
Ensure commands sent to the cache with a null display name do not cause a null pointer exception.

''' Comms '''

Changed thread locking method for comms send. Should resolve thread not owner issue

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b22.zip V1.6b22]   ==

''' Security '''

Added number of clients to startup messages

''' Cache '''

Ensure cache is properly set up, even if the device model does not correctly set the display name for the flash command. Resolves [ticket:584]

''' HAL '''

Simplified HAL model

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b21.zip V1.6b21]   ==

''' HAL '''

Simplified HAL model

IAdded debugging statements.

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b20.zip V1.6b20]   ==

''' M1 '''

Incorporated fixes.

''' Web '''

Ensure all XML packets to be sent to the web browser have a correct target display name. Resolves [ticket:580]

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b19.zip V1.6b19]   ==

''' CBUS '''

Ensure non-ascii IP characters are captured at all logging levels.

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b18.zip V1.6b18]   ==

''' M1 '''

Ensure null state variables do not break start up.
Set cache correctly for the web client.

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b16.zip V1.6b16]   ==

''' M1 '''

Rolled in PIR changes.

''' Calendar '''

Fixed problem with ACTIVE="N" on repeating events. Solves ticket [ticket:575]

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b15.zip V1.6b15]   ==

''' CBUS '''

Ensure MMI helper does not get comms reference before comms is properly set up in master model.

== Released [attachment:wiki:SoftwareReleases:eLife-1.6b14.zip V1.6b14]   ==

''' CBUS '''
