@@ -1,4 +1,4 @@
-#Sun Jan 07 18:15:24 EST 2007
+#Sun Jan 07 20:37:27 EST 2007
 major_version=1.6b
-minor_version=23
+minor_version=24
 app_name=eLife
